2004-10-13  Richard Hult  <richard@imendio.com>

	* libplanner/mrp-xsl.c (xml_planner_pre012_write, html_write):
	Check error after saving to XML.

	* libplanner/mrp-file-module.c (mrp_file_reader_read_string): Fix
	typo.

	* src/planner-task-tree.c (task_cmd_move_undo): Remove C++
	comment.

2004-10-10  Alvaro del Castillo <acs@barrapunto.com>
	* eds-backend/docs/Work-alfa8
	All work finished for this milestone.

2004-10-10  Alvaro del Castillo <acs@barrapunto.com>
	* src/planner-sql-plugin.c:
	We don't need to check for upgrade files if the tables don't
	exist in the database.

2004-10-09  Richard Hult  <richard@imendio.com>

	* data/stylesheets/Makefile.am:
	* data/stylesheets/html1_css.xsl:
	* data/stylesheets/html1_gantt.xsl:
	* data/stylesheets/html1_resources.xsl:
	* data/stylesheets/html1_tasks.xsl:
	* data/stylesheets/planner2html.xsl:
	* libplanner/mrp-xsl.c: Clean up the HTML export stylesheet, tweak
	the style a bit, put the header fields in a table. Make the note
	text sections wrap and always show at least 30 days in the gantt
	chart.

2004-10-09  Richard Hult  <richard@imendio.com>

	* data/stylesheets/html1_tasks.xsl: Set note class for notes.

	* data/stylesheets/html1_css.xsl: Add top/bottom margins for the
	gantt bars. Align table cell contents at the top, wrap long
	notes. Reduce font size for footer.

2004-10-08  Richard Hult  <richard@imendio.com>

	* libplanner/mrp-time.c (mrp_time_debug_print): Fix typo.

2004-10-08  Richard Hult  <richard@imendio.com>

	* src/planner-gantt-header.c (gantt_header_leave_notify_event)
	(gantt_header_motion_notify_event, gantt_header_class_init): Add
	date-hint signal and emit it when the mouse moves over a new date.

	* src/planner-gantt-chart.c (gantt_chart_init):
	(gantt_chart_header_date_hint_changed_cb): Put the date hint on
	the status bar.

2004-10-06  Richard Hult  <richard@imendio.com>

	* src/planner-task-tree.c (planner_task_tree_insert_task): Select